# walkermind-os

./: .dockerignore  .gate-bot-test.md  .gitignore  .replit  AGENTS-IMPROVEMENT-SPEC.md  AGENTS.md  AGENTS_NEXUS_FINAL.md  AGENTS_old.md  CLAUDE.md  COMMANDER.md  CURSOR.md  MEMORY.md  MISTRAL_KNOWLEDGE.md  NEXUS.md  ONA.md  PROJECT_REGISTRY.md  PROJECT_STATE.md  README.md  ROADMAP.md  commander_github_action_schema.yaml  commander_knowledge.md  conftest.py  main.py  privacy-policy.md  pytest.ini  requirements.txt  skills-lock.json
projects/polymarket/crusaderbot/: .dockerignore  .env.example  DEPLOY.md  Dockerfile  P0_RUNTIME_MAP.md  README.md  __init__.py  audit.py  cache.py  config.py  database.py  fly.toml  main.py  notifications.py  pyproject.toml  scheduler.py  users.py
projects/polymarket/crusaderbot/api/: admin.py  health.py  legal.py  ops.py  per_user_rate_limit.py  rate_limit.py
projects/polymarket/crusaderbot/archive/: README.md
projects/polymarket/crusaderbot/bot/: dispatcher.py  dispatcher.py.bak  messages.py  messages_mvp.py  presets.py  roles.py  tier.py
projects/polymarket/crusaderbot/core/: event_bus.py
projects/polymarket/crusaderbot/db/: schema_r4.sql
projects/polymarket/crusaderbot/docs/: ux-blueprint-v7.md
projects/polymarket/crusaderbot/integrations/: builder_relayer.py  polygon.py  polygon_usdc.py  polymarket.py
projects/polymarket/crusaderbot/jobs/: __init__.py  daily_pnl_summary.py  heisenberg_realtime_sync.py  hourly_report.py  market_signal_scanner.py  market_signal_scanner.py.bak  market_sync.py  weekly_insights.py
projects/polymarket/crusaderbot/legal/: privacy-policy.md  terms-of-service.md
projects/polymarket/crusaderbot/lib/: __init__.py  strategy_base.py
projects/polymarket/crusaderbot/migrations/: 001_init.sql  002_safety.sql  003_live_safety.sql  004_deposit_log_index.sql  005_position_exit_fields.sql  006_redeem_queue.sql  007_ops.sql  008_strategy_tables.sql  009_copy_trade.sql  010_signal_following.sql  011_execution_queue.sql  012_backfill_signal_following_strategy.sql  013_copy_trade_events_nullable_fk.sql  014_add_is_demo_flag.sql  015_order_lifecycle.sql  016_preset_system.sql  017_copy_trade_tasks.sql  017_user_locked.sql  018_copy_trade_tasks.sql  019_onboarding_flag.sql  020_copy_trade_execution.sql  021_mode_change_events.sql  022_referral_fee_system.sql  022b_fix_partial_022.sql  022c_add_trade_id_to_fees.sql  023_user_tiers.sql  024_signal_scan_engine_seed.sql  025_heisenberg_live_feed.sql  026_add_strategy_type_to_orders.sql  027_notifications_on.sql  028_add_preset_activated_at.sql  029_webtrader_tables.sql  030_job_runs_metadata.sql  031_signal_scanner_user_enrollment.sql  032_copy_trade_events.sql  032_risk_caps_audit_log.sql  033_risk_caps_audit_log.sql  034_positions_denorm_columns.sql  035_copy_trade_extend.sql  036_ui_responsive_polish.sql  (+39 more)
projects/polymarket/crusaderbot/monitoring/: __init__.py  alerts.py  health.py  logging.py  sentry.py
projects/polymarket/crusaderbot/reports/: forge-fast-ui-premium-1.md  forge-fast-ui-premium-2.md
projects/polymarket/crusaderbot/scripts/: cleanup_demo_data.py  cleanup_flip_hunter_sub_cent_2026_05_28.sql  mainnet_preflight.py  realtime_paper_system_validation.py  seed_demo_data.py  seed_operator_tier.py
projects/polymarket/crusaderbot/services/: allowlist.py  daily_report_service.py  deposit_watcher.py  heisenberg.py  heisenberg_trades.py  ledger.py  notification_service.py  portfolio_chart.py  portfolio_snapshots.py  tiers.py  user_service.py
(+2234 files in other folders)
