[project]
name = "crusaderbot"
version = "0.1.0"
description = "CrusaderBot — autonomous Polymarket trading bot, Telegram-controlled, multi-user."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-telegram-bot[ext]>=21.0,<22.0",
    "asyncpg>=0.29",
    "redis[hiredis]>=5.0",
    "httpx>=0.27",
    "web3>=6.15",
    "cryptography>=42.0",
    "apscheduler>=3.10,<4.0",
    "structlog>=24.1",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "py-clob-client",
    "tenacity>=8.2",
    "eth-account>=0.10",
    "sentry-sdk[fastapi]>=2.0",
    # Phase 4D — push-based fill streaming over wss://ws-subscriptions-clob.polymarket.com.
    "websockets>=12.0,<14.0",
    # Test-only — listed here (not in a separate test extra) because the
    # CI workflow installs straight from [project.dependencies] and the
    # project does not yet ship a test extras group. Phase 4A CLOB tests
    # use @pytest.mark.asyncio (default strict mode), which is unknown
    # to a stock pytest install.
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["crusaderbot*"]

[tool.ruff.lint]
# R12a baseline — syntax errors + undefined references only.
# F401 (unused imports) and stylistic rules are deferred to a dedicated
# cleanup lane to keep R12a scope-clean (no Python source modifications).
select = ["E9", "F63", "F7", "F82"]
